feat: 优化了模拟面试的组题逻辑